tigergraph-server/3.10/system-management/management-commands.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands)[Next](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
  *     * [TigerGraph DB Release Notes](https://docs.tigergraph.com/tigergraph-server/3.10/release-notes/)
  *     * [Overview](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [Get Started](https://docs.tigergraph.com/tigergraph-server/3.10/getting-started/)
      * Installation
        * [On Docker](https://docs.tigergraph.com/tigergraph-server/3.10/getting-started/docker)
        * [On Kubernetes](https://docs.tigergraph.com/tigergraph-server/3.10/getting-started/kubernetes)
        * [On Cloud Marketplace](https://docs.tigergraph.com/tigergraph-server/3.10/getting-started/cloud-images/)
          * [AWS](https://docs.tigergraph.com/tigergraph-server/3.10/getting-started/cloud-images/aws)
          * [Azure](https://docs.tigergraph.com/tigergraph-server/3.10/getting-started/cloud-images/azure)
          * [GCP](https://docs.tigergraph.com/tigergraph-server/3.10/getting-started/cloud-images/gcp)
        * [On Linux](https://docs.tigergraph.com/tigergraph-server/3.10/getting-started/linux)
          * [System Requirements](https://docs.tigergraph.com/tigergraph-server/3.10/installation/hw-and-sw-requirements)
          * [Linux On Bare Metal](https://docs.tigergraph.com/tigergraph-server/3.10/installation/bare-metal-install)
          * [Post Install Checks](https://docs.tigergraph.com/tigergraph-server/3.10/installation/post-install-check)
        * [Advanced License Issues](https://docs.tigergraph.com/tigergraph-server/3.10/installation/license)
        * [Changing Ports](https://docs.tigergraph.com/tigergraph-server/3.10/installation/change-port)
        * [Change IP or Hostname](https://docs.tigergraph.com/tigergraph-server/3.10/installation/change-ip-or-hostname)
        * [Upgrade](https://docs.tigergraph.com/tigergraph-server/3.10/installation/upgrade)
        * [Uninstallation](https://docs.tigergraph.com/tigergraph-server/3.10/installation/uninstallation)
      * [The GSQL Shell](https://docs.tigergraph.com/tigergraph-server/3.10/gsql-shell/)
        * [GSQL Shell Sessions](https://docs.tigergraph.com/tigergraph-server/3.10/gsql-shell/gsql-sessions)
        * [Using a Remote GSQL Client](https://docs.tigergraph.com/tigergraph-server/3.10/gsql-shell/using-a-remote-gsql-client)
        * [GSQL Shell (Web)](https://docs.tigergraph.com/tigergraph-server/3.10/gsql-shell/web)
    * [Create Database](https://docs.tigergraph.com/tigergraph-server/3.10/getting-started/database-definition)
      * [MultiGraph Overview](https://docs.tigergraph.com/tigergraph-server/3.10/intro/multigraph-overview)
  *     * [Load Data](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/)
      * [Overview](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/data-loading-overview)
      * [Externalize Kafka Configs](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/externalizing-kafka-configs)
      * [Load from Local Files](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/load-local-files)
      * [Load from Cloud Storage](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/load-from-cloud)
      * [Load from Data Warehouse](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/load-from-warehouse)
      * [Load from External Kafka](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/load-from-kafka)
        * [Avro Data Validation through KafkaConnect](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/avro-validation-with-kafka)
        * [Kafka SSL Security Guide](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/kafka-ssl-security-guide)
      * [Load from Spark Dataframe](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/load-from-spark-dataframe)
        * [Spark Connection Via JDBC Driver (Deprecated)](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/spark-connection-via-jdbc-driver)
      * [Manage Data Sources](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/manage-data-source)
      * [Stream from External Kafka (Deprecated)](https://docs.tigergraph.com/tigergraph-server/3.10/data-loading/data-streaming-connector/kafka)
  *     * Advanced Topics
      * [System Management](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-with-gadmin)
        * [Memory management](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/memory-management)
        * [Manage TigerGraph services](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/manage-services)
        * [Workload Management](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/workload-management)
        * [Metrics Reporting](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/system-metrics)
        * [Command Glossary](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands)
        * [Change Data Capture (CDC) Overview](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/change-data-capture/cdc-overview)
          * [CDC Setup](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/change-data-capture/cdc-setup)
          * [CDC Message Examples](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/change-data-capture/cdc-message-example)
          * [CDC State Monitoring](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/change-data-capture/cdc-state-monitoring)
      * [Access Management](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/)
        * Authentication
          * [Enabling User Authentication](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/enabling-user-authentication)
          * [User Credentials](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/user-credentials)
          * [Single Sign-On](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/sso)
          * [Lightweight Directory Access Protocol (LDAP)](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/ldap)
          * [OIDC JWT Authentication](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/jwt-token)
        * Authorization
          * [User Management](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/user-management)
          * [Role Management](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/role-management)
          * [Access Control Model](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/access-control-model)
          * [Access Control Lists (ACLs)](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/acl-management)
          * [Row Policy Overview (Preview Feature)](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/rbac-row-policy/row-policy-overview)
            * [Key Concepts](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/rbac-row-policy/rbac-row-policy)
            * [Set Up Row Policy](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/rbac-row-policy/setup-row-policy)
          * [Vertex-Level Access Control (Deprecated)](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/vlac)
      * [Backup and Restore](https://docs.tigergraph.com/tigergraph-server/3.10/backup-and-restore/)
        * [Database Import/Export All Graphs](https://docs.tigergraph.com/tigergraph-server/3.10/backup-and-restore/database-import-export)
        * [Import/Export Individual Graphs](https://docs.tigergraph.com/tigergraph-server/3.10/backup-and-restore/single-graph-import-export)
        * [Backup and Restore Configurations](https://docs.tigergraph.com/tigergraph-server/3.10/backup-and-restore/configurations)
        * [Back up a Database Cluster](https://docs.tigergraph.com/tigergraph-server/3.10/backup-and-restore/backup-cluster)
        * [Restore a Database Backup from the Same Cluster](https://docs.tigergraph.com/tigergraph-server/3.10/backup-and-restore/restore-backup-same)
        * [Restore a Database Backup from Another Cluster](https://docs.tigergraph.com/tigergraph-server/3.10/backup-and-restore/cross-cluster-backup)
        * [Differential Backup](https://docs.tigergraph.com/tigergraph-server/3.10/backup-and-restore/differential-backups)
        * [Online Backup](https://docs.tigergraph.com/tigergraph-server/3.10/backup-and-restore/online-backup)
        * [Legacy Backup and Restore](https://docs.tigergraph.com/tigergraph-server/3.10/backup-and-restore/gbar-legacy)
      * [Cluster and HA Management](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/)
        * Cluster Resizing
          * [Cluster Expansion](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/expand-a-cluster)
          * [Cluster Shrinking](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/shrink-a-cluster)
          * [Cluster Repartition](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/repartition-a-cluster)
          * [Cluster Replace](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/how_to-replace-a-node-in-a-cluster)
        * [Cross-Region Replication (CRR)](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/crr-index)
          * [Set up CRR](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/set-up-crr)
          * [Fail over to the DR cluster](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/fail-over)
          * [Troubleshooting CRR](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/troubleshooting)
          * [CRR FAQ](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/crr-faq)
        * [High Availability (HA)](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/ha-overview)
          * [Cluster Configuration](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/ha-cluster)
          * [GSQL Server Support](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/ha-for-gsql-server)
          * [Application Server Support](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/ha-for-application-server)
          * [Cluster Commands](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/cluster-commands)
          * [Removal of Failed Nodes](https://docs.tigergraph.com/tigergraph-server/3.10/cluster-and-ha-management/remove-failed-node)
      * [Architecture](https://docs.tigergraph.com/tigergraph-server/3.10/intro/internal-architecture)
        * [MultiGraph Overview](https://docs.tigergraph.com/tigergraph-server/3.10/intro/multigraph-overview)
        * [Transaction Processing and ACID Support](https://docs.tigergraph.com/tigergraph-server/3.10/intro/transaction-and-acid)
        * [Continuous Availability Overview](https://docs.tigergraph.com/tigergraph-server/3.10/intro/continuous-availability-overview)
      * [Kubernetes](https://docs.tigergraph.com/tigergraph-server/3.10/kubernetes/)
        * [Kubernetes Operator](https://docs.tigergraph.com/tigergraph-server/3.10/kubernetes/k8s-operator/)
  *     * [Security](https://docs.tigergraph.com/tigergraph-server/3.10/security/)
      * [Auditing Privileged User Actions](https://docs.tigergraph.com/tigergraph-server/3.10/security/audit-privileged-actions)
      * [Encrypting Connections](https://docs.tigergraph.com/tigergraph-server/3.10/security/encrypting-connections)
      * [Encrypting Data At Rest](https://docs.tigergraph.com/tigergraph-server/3.10/security/encrypting-data-at-rest)
      * [File Input Policy](https://docs.tigergraph.com/tigergraph-server/3.10/security/gsql-file-input-policy)
      * [File Output Policy](https://docs.tigergraph.com/tigergraph-server/3.10/security/file-output-policy)
      * [Configuring Login Protection](https://docs.tigergraph.com/tigergraph-server/3.10/security/login-protection)
  *     * [REST API Reference](https://docs.tigergraph.com/tigergraph-server/3.10/API/)
      * [Authentication](https://docs.tigergraph.com/tigergraph-server/3.10/API/authentication)
      * [Built-in Endpoints](https://docs.tigergraph.com/tigergraph-server/3.10/API/built-in-endpoints)
      * [Built-in Endpoints JSON Catalog](https://docs.tigergraph.com/tigergraph-server/3.10/API/json-catalog)
      * [Upsert data to graph](https://docs.tigergraph.com/tigergraph-server/3.10/API/upsert-rest)
  *     * Additional Resources
      * [Best Practices](https://docs.tigergraph.com/tigergraph-server/3.10/additional-resources/best-practice-guides/best-practices-overview)
        * [Scaling Guide](https://docs.tigergraph.com/tigergraph-server/3.10/additional-resources/best-practice-guides/best-prac-scaling-clusters)
      * Troubleshooting and FAQs
        * [Knowledge base and FAQs](https://kb.tigergraph.com/)
        * [Troubleshooting Guide](https://docs.tigergraph.com/tigergraph-server/3.10/troubleshooting/troubleshooting-guide)
        * [System Administration FAQs](https://docs.tigergraph.com/tigergraph-server/3.10/troubleshooting/system-administration-faqs)
        * [Log Files](https://docs.tigergraph.com/tigergraph-server/3.10/troubleshooting/log-files)
          * [Audit Logs](https://docs.tigergraph.com/tigergraph-server/3.10/troubleshooting/audit-log)
          * [Gathering Log Information with gcollect](https://docs.tigergraph.com/tigergraph-server/3.10/troubleshooting/gcollect)
          * [Set up Log Viewing with Elasticsearch, Kibana and Filebeat](https://docs.tigergraph.com/tigergraph-server/3.10/troubleshooting/elk-filebeat)
      * References
        * [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/3.10/reference/configuration-parameters)
        * [Return codes](https://docs.tigergraph.com/tigergraph-server/3.10/reference/return-codes)
        * [Object-Based Privilege Tables](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/rbac-row-policy/row-policy-privileges-table)
        * [List of Legacy Privilege Syntax](https://docs.tigergraph.com/tigergraph-server/3.10/reference/list-of-privileges)
        * [List of Ports](https://docs.tigergraph.com/tigergraph-server/3.10/reference/ports)
        * [Glossary](https://docs.tigergraph.com/tigergraph-server/3.10/reference/glossary)
        * [Patents and Third Party Software](https://docs.tigergraph.com/tigergraph-server/3.10/reference/patents-and-third-party-software)
        * [Legacy Version Documentation](https://docs.tigergraph.com/tigergraph-server/3.10/additional-resources/legacy-tg-versions)
        * [Comparing TigerGraph Editions](https://docs.tigergraph.com/tigergraph-server/3.10/intro/comparison-of-editions)
        * [Release and Patch Process](https://docs.tigergraph.com/tigergraph-server/3.10/intro/release-process)
        * [RBAC Row Policy EBNF](https://docs.tigergraph.com/tigergraph-server/3.10/user-access/rbac-row-policy/row-policy-ebnf)


TigerGraph DB 3.10
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [TigerGraph DB 3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
  * Advanced Topics
  * [System Management](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-with-gadmin)
  * [Command Glossary](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands)


[Edit this Page](https://github.com/tigergraph/server-docs/edit/3.10/modules/system-management/pages/management-commands.adoc)
### Contents
  * [List of commands](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_list_of_commands)
  * [gadmin autocomplete](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_autocomplete)
  * [gadmin backup](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_backup)
  * [gadmin backup create](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_backup_create)
  * [gadmin backup list](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_backup_list)
  * [gadmin backup retain](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_backup_retain)
  * [gadmin backup restore](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_backup_restore)
  * [gadmin config](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_config)
  * [gadmin init](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_init)
  * [gadmin license](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_license)
  * [gadmin connector](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_connector)
  * [gadmin log](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_log)
  * [gadmin metric](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_metric)
  * [gadmin reset](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_reset)
  * [gadmin restart](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_restart)
  * [gadmin start](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_start)
  * [gadmin status](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_status)
  * [gadmin stop](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_stop)
  * [gadmin version](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_version)


# Command Glossary
### Contents
  * [List of commands](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_list_of_commands)
  * [gadmin autocomplete](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_autocomplete)
  * [gadmin backup](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_backup)
  * [gadmin backup create](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_backup_create)
  * [gadmin backup list](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_backup_list)
  * [gadmin backup retain](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_backup_retain)
  * [gadmin backup restore](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_backup_restore)
  * [gadmin config](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_config)
  * [gadmin init](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_init)
  * [gadmin license](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_license)
  * [gadmin connector](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_connector)
  * [gadmin log](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_log)
  * [gadmin metric](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_metric)
  * [gadmin reset](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_reset)
  * [gadmin restart](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_restart)
  * [gadmin start](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_start)
  * [gadmin status](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_status)
  * [gadmin stop](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_stop)
  * [gadmin version](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_version)


TigerGraph Graph Administrator (gadmin) is a tool for managing TigerGraph servers. It has a self-contained help function and a man page, whose output is shown below for reference.
To see a listing of all the options or commands available for gadmin, run any of the following commands:
```
$ gadmin -h
$ gadmin --help
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

After changing a configuration setting, it is generally necessary to run **`gadmin config apply`.** Some commands apply automatically. If you are not certain, just run **`gadmin config apply`**  
---  
## [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_list_of_commands)List of commands
Below is the man page for gadmin. Common examples are provided with each command.
Some commands have changed in v3.0. In particular, `gadmin set <config | license>` has changed to `gadmin <config | license> set`  
---  
```
GADMIN(1)             User Commands                GADMIN(1)
NAME
    gadmin - manual page for TigerGraph Administrator.
SYNOPSIS
    gadmin [flags]
    gadmin [command]
DESCRIPTION
    gadmin is a tool for managing TigerGraph servers
OPTIONS
    Available Commands:
     autocomplete Generate autocomplete script
     config    Manage the configuration for the TigerGraph system
     help     Help about any command
     init     Init the whole cluster or given service
     license   Manage TigerGraph license
     log     List log files of the given services or all services
     reset    Reset the whole init or given service with its data
     restart   Restart services by service id
     start    Start services by service id
     status    Show current status of service
     stop     Stop services by service id
     version   Show the version information
Flags:
   --debug  enable debug log output to stdout
 -h, --help  help for gadmin
Use "gadmin [command] --help" for more information about a command.
GADMIN(1)
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_autocomplete)gadmin autocomplete
Autocomplete is more of a feature than a command. It allows you to see all possible entries of a specific configuration. Press Tab when typing a command to either print out all possible entries or auto-complete the entry you are currently typing.
```
$ gadmin autocomplete -h
Generate autocomplete script
Usage:
 gadmin autocomplete <bash|zsh> [flags]
Description:
 If you want to make this automatic, add ". <(gadmin autocomplete bash)" to your
 .bashrc file.
Flags:
 -h, --help  help for autocomplete
Global Flags:
   --debug  enable debug log output to stdout
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

The example below shows an example of the autocomplete for the command `gadmin status`.
```
$ gadmin status
admin     exe      ifm      nginx
all      gpe      infra     restpp
ctrl     gse      kafka     ts3
dict     gsql     kafkaconn   ts3serv
etcd     gui      kafkastrm-ll zk
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_backup)gadmin backup
`gadmin backup` commands are used to create and get information about TigerGraph backups. See [Backup and Restore](https://docs.tigergraph.com/tigergraph-server/3.10/backup-and-restore/) for more information about how to perform backups.
### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_backup_create)gadmin backup create
```
$ gadmin backup create -h
Create a cluster backup
Usage:
 gadmin backup create [tag] [flags]
Description:
 Creates a cluster backups with a custom tag for the backup.
 Example:
 gadmin backup create weekly
Flags:
  -h, --help                  help for restore
    --data-consistency-check         Enable the data consistency check during the backup.
    --data-consistency-check-timeout int32  timeout(sec) for data consistency check (default 600)
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

See [Back up a Database Cluster](https://docs.tigergraph.com/tigergraph-server/4.2/backup-and-restore/backup-cluster) for more examples.  
---  
### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_backup_list)gadmin backup list
```
$ gadmin backup list -h
List backups
Usage:
 gadmin backup list [tag] [flags]
Description:
 List backups, can specify backup tag name
 Example:
 gadmin cluster backup list
Flags:
 -h, --help  help for list
   --json  Render the backups list in json format rather than table.
   --meta  Write metadata to local file, for cross-cluster restore. A tag is required.
Global Flags:
   --debug  enable debug log output to stdout
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_backup_retain)gadmin backup retain
The `retain` command does storage cleaning for backups whose tags match the given <TagPrefix>.
```
$ gadmin backup retain -h
Usage:
 gadmin backup retain <TagPrefix> [-c] [-d] [flags]
Description:
 The 'retain' command performs backup storage cleanup to backups that have
 the given <TagPrefix>. Backups with a tag other than <TagPrefix> are unaffected.
 Specifically, the cleanup is done by keeping only those backup files that satisfy the
 following conditions:
 (1) Backups that do NOT contain the given tag prefix, OR
 (2) Backups that contain the given tag prefix AND
 (a) it is one of the most recent 'count' backups within the same prefix group AND
 (b) the age of backup is within 'duration'.
 E.g. the following command keeps the most recent 10 backups within 10 days for
 backups starting with the prefix "week":
 gadmin backup retain week -c 10 -d 240h
 Other backups with a name starting with the prefix "week" will be removed.
Flags:
 -c, --count int     Being one of the most recent <count> backups. (default -1, meaning do not cleanup based on count)
   --dry-run      dry run and output the retain result
 -d, --duration string
             The age of backup is within <duration>.
             A duration string should be an unsigned sequence of decimal numbers,
             each with an optional fraction and a unit suffix, such as "300ms", "1.5h" or "2h45m".
             Valid time units are "ns", "us" (or "µs"), "ms", "s", "m", "h".
 -h, --help       help for retain
 -y, --y         yes to all questions
Global Flags:
   --debug  enable debug log output to stdout
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_backup_restore)gadmin backup restore
```
gadmin backup restore -h
Restore a cluster from backup
Usage:
 gadmin backup restore [tag] [flags]
Description:
 Restores a backup with the custom tag for the backup.
 Example:
 gadmin backup restore weekly-<timestamp>
Flags:
 -h, --help  help for restore
   --dr   show the restore is on a DR cluster or the one to be a DR cluster.
 -y, --y    yes to all questions
```

### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_config)gadmin config
`gadmin config` commands are used to manage the configuration for the TigerGraph system. To get a complete list of configuration parameters that are available, see [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/3.10/reference/configuration-parameters).
`gadmin config` has many sub-entries as well, they will be listed below.
```
$ gadmin config -h
Manage the configuration for the TigerGraph system
Usage:
 gadmin config [flags]
 gadmin config [command]
Description:
 You can specify local config file to turn on file mode, which no remote
 connection will be made and the configs are read/write from/to the file.Note: Not
 all config commands work on file mode.
Available Commands:
 apply    Apply the config changes in staging state
 diff    Show the differences between staging and applied configs
 discard   Discard the staging config changes
 dump    Dump the staging system config in json format
 entry    Configure the entries with given substring patterns interactively
 get     Get the config value of given entry name non-interactivly
 group    Configure the entries of given groups interactively
 init    Initialize configuration
 list    List the available config entries or groups
 set     Configure the entry of given config entry name in a non-interactive manner
Flags:
   --file string  specify config file path
 -h, --help     help for config
Global Flags:
   --debug  enable debug log output to stdout
Use "gadmin config [command] --help" for more information about a command.
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

#### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_config_apply)gadmin config apply
Apply the configuration changes.
```
$ gadmin config apply -h
Apply the config changes in staging state
Usage:
 gadmin config apply [flags]
Flags:
 -y, --confirm       confirm to apply
 -f, --force        force components to apply new config
 -h, --help         help for apply
   --initial       config apply with the initial configuration when the remote config (ETCD) is empty
   --with-config string  the input config file used to config apply, will overwrite both local and remote(ETCD)
Global Flags:
   --debug     enable debug log output to stdout
   --file string  specify config file path
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

#### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_config_diff)gadmin config diff
Show what configuration changes were made.
```
$ gadmin config diff -h
Show the differences between staging and applied configs
Usage:
 gadmin config diff [flags]
Flags:
 -h, --help  help for diff
Global Flags:
   --debug     enable debug log output to stdout
   --file string  specify config file path
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

#### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_config_discard)gadmin config discard
Discard the configuration changes without applying them.
```
$ gadmin config discard -h
Discard the staging config changes
Usage:
 gadmin config discard [flags]
Flags:
 -h, --help  help for discard
Global Flags:
   --debug     enable debug log output to stdout
   --file string  specify config file path
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

#### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_config_dump)gadmin config dump
Display all configuration entries.
```
$ gadmin config dump -h
Dump the staging system config in json format
Usage:
 gadmin config dump [flags]
Flags:
 -h, --help  help for dump
Global Flags:
   --debug     enable debug log output to stdout
   --file string  specify config file path
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

#### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_config_entry)gadmin config entry
Change a configuration entry.
```
$ gadmin config entry -h
Configure the entries with given substring patterns interactively
Usage:
 gadmin config entry [EntryName] [flags]
Description:
 You may use `config entry system` to go through all the system related entries.
Flags:
 -a, --all   configure all entries
   --basic  configure basic entries only
 -h, --help  help for entry
Global Flags:
   --debug     enable debug log output to stdout
   --file string  specify config file path
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

#### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_config_get)gadmin config get
Get the value of a specific configuration entry.
```
$ gadmin config get -h
Get the config value of given entry name non-interactivly
Usage:
 gadmin config get [EntryName] [flags]
Flags:
 -h, --help  help for get
Global Flags:
   --debug     enable debug log output to stdout
   --file string  specify config file path
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

#### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_config_group)gadmin config group
Configure entries for a specific service group. e.g. KAFKA, GPE, ZK
```
$ gadmin config group -h
Configure the entries of given groups interactively
Usage:
 gadmin config group [GroupName] [flags]
Description:
 You may use `gadmin config list group` to see all the groups.
Flags:
 -h, --help  help for group
Global Flags:
   --debug     enable debug log output to stdout
   --file string  specify config file path
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

#### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_config_init)gadmin config init
Initialize your configuration.
```
$ gadmin config init -h
Initialize configuration
Usage:
 gadmin config init [flags]
Flags:
   --all      display every configurable entry
   --expert     display node assignment entries
   --ha       enable HA for init
 -h, --help      help for init
 -i, --input string  provide an input file name and init the configuration silently with the provided input file
   --template    show the template for init initialization
Global Flags:
   --debug     enable debug log output to stdout
   --file string  specify config file path
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

#### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_config_list)gadmin config list
List all configurable entries or entry groups.
```
$ gadmin config list -h
List the available config entries or groups
Usage:
 gadmin config list <group|entry> [flags]
Description:
 List prints out the available config groups or config entries, which can be used
 in entry/group commands.
Flags:
   --basic  list basic entries only
 -h, --help  help for list
Global Flags:
   --debug     enable debug log output to stdout
   --file string  specify config file path
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

#### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_config_set)gadmin config set
```
$ gadmin config set -h
Configure the entry of given config entry name in a non-interactive manner
Usage:
 gadmin config set [EntryName] [EntryValue] [flags]
Description:
 [EntryName] [EntryValue] must be provided in pairs, and use space to separate
 each pair.
Flags:
 -h, --help  help for set
Global Flags:
   --debug     enable debug log output to stdout
   --file string  specify config file path
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

#### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_config_reset)gadmin config reset
Reset one or more configuration parameters to their default settings. View the full list of configuration parameters and their default values at [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/3.10/reference/configuration-parameters).
```
Usage:
gadmin config reset [EntryName...] [flags]
Flags:
-h, --help  help for reset
Global Flags:
--debug     enable debug log output to stdout
--file string  specify config file path
bash![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_init)gadmin init
```
$ gadmin init -h
Init the whole cluster or given service
Usage:
 gadmin init [flags]
 gadmin init [command]
Description:
 Init command initializes the cluster/kafka. When "cluster" is specified,
 a config path is required.
Available Commands:
 cluster   Init the whole cluster
 kafka    Init the KAFKA
Flags:
 -h, --help  help for init
Global Flags:
   --debug  enable debug log output to stdout
Use "gadmin init [command] --help" for more information about a command.
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_license)gadmin license
Options for configuring your license.
Note that there are two slightly different ways to use the `gadmin license set` command:
  * `gadmin license set <new_license_key>` This syntax is used when the user pastes the license key into the console.
  * `gadmin license set @<path_to_license_file>` The `@` symbol is necessary when the user directs gadmin to a file containing the license key.


```
$ gadmin license -h
Manage TigerGraph license
Usage:
 gadmin license [flags]
 gadmin license [command]
Available Commands:
 seed    Collects host signature and generates seed file for issuing license
 set     Set new license
 status   Display license status and info
Flags:
 -h, --help  help for license
Global Flags:
   --debug  enable debug log output to stdout
Use "gadmin license [command] --help" for more information about a command.
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_connector)gadmin connector
`gadmin connector` commands manage the creation, deletion and update for the streaming data connector.
```
$ gadmin connector -h
Manage the creation, deletion, update for the Kafka connector
Usage:
 gadmin connector [flags]
 gadmin connector [command]
Description:
 You can manage the creation, deletion and update for the Kafka connector
Available Commands:
 create   Create connectors with configuration file
 delete   Delete the corresponding connector
 list    List the information of the specific connector or list all available connector
 pause    Pause the corresponding connector
 restart   Restart the corresponding connector
 resume   Resume the corresponding connectors
 status   Get the status of the corresponding connectors
Flags:
 -h, --help  help for connector
Global Flags:
   --debug  enable debug log output to stdout
Use "gadmin connector [command] --help" for more information about a command.
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_log)gadmin log
The `gadmin log` command will reveal the location of all commonly checked log files for the TigerGraph system.
```
$ gadmin log -h
List log files of the given services or all services
Usage:
 gadmin log [service name...] [flags]
Description:
 Service name should be a valid TigerGraph service name, for example, GSE, RESTPP
 or GPE.
Flags:
 -h, --help  help for log
Global Flags:
   --debug  enable debug log output to stdout
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

```
$ gadmin log
ADMIN : /home/tigergraph/tigergraph/log/admin/ADMIN#1.out
ADMIN : /home/tigergraph/tigergraph/log/admin/ADMIN.INFO
CTRL  : /home/tigergraph/tigergraph/log/controller/CTRL#1.log
CTRL  : /home/tigergraph/tigergraph/log/controller/CTRL#1.out
DICT  : /home/tigergraph/tigergraph/log/dict/DICT#1.out
DICT  : /home/tigergraph/tigergraph/log/dict/DICT.INFO
ETCD  : /home/tigergraph/tigergraph/log/etcd/ETCD#1.out
EXE  : /home/tigergraph/tigergraph/log/executor/EXE_1.log
EXE  : /home/tigergraph/tigergraph/log/executor/EXE_1.out
GPE  : /home/tigergraph/tigergraph/log/gpe/GPE_1#1.out
GSE  : /home/tigergraph/tigergraph/log/gse/GSE_1#1.out
GSE  : /home/tigergraph/tigergraph/log/gse/log.INFO
GSQL  : /home/tigergraph/tigergraph/log/gsql/GSQL#1.out
GSQL  : /home/tigergraph/tigergraph/log/gsql/log.INFO
GUI  : /home/tigergraph/tigergraph/log/gui/GUI#1.out
IFM  : /home/tigergraph/tigergraph/log/informant/IFM#1.log
IFM  : /home/tigergraph/tigergraph/log/informant/IFM#1.out
KAFKA : /home/tigergraph/tigergraph/log/kafka/controller.log
KAFKA : /home/tigergraph/tigergraph/log/kafka/kafka-request.log
KAFKA : /home/tigergraph/tigergraph/log/kafka/kafka.log
KAFKA : /home/tigergraph/tigergraph/log/kafka/server.log
KAFKA : /home/tigergraph/tigergraph/log/kafka/state-change.log
KAFKACONN: /home/tigergraph/tigergraph/log/kafkaconn/KAFKACONN#1.out
KAFKACONN: /home/tigergraph/tigergraph/log/kafkaconn/kafkaconn.log
KAFKASTRM-LL: /home/tigergraph/tigergraph/log/kafkastrm-ll/KAFKASTRM-LL_1.out
KAFKASTRM-LL: /home/tigergraph/tigergraph/log/kafkastrm-ll/kafkastrm-ll.log
NGINX : /home/tigergraph/tigergraph/log/nginx/logs/NGINX#1.out
NGINX : /home/tigergraph/tigergraph/log/nginx/logs/error.log
NGINX : /home/tigergraph/tigergraph/log/nginx/logs/nginx.access.log
NGINX : /home/tigergraph/tigergraph/log/nginx/logs/nginx.error.log
RESTPP : /home/tigergraph/tigergraph/log/restpp/RESTPP#1.out
RESTPP : /home/tigergraph/tigergraph/log/restpp/log.INFO
TS3  : /home/tigergraph/tigergraph/log/ts3/TS3_1.log
TS3  : /home/tigergraph/tigergraph/log/ts3/TS3_1.out
TS3SERV: /home/tigergraph/tigergraph/log/ts3serv/TS3SERV#1.out
ZK   : /home/tigergraph/tigergraph/log/zk/ZK#1.out
ZK   : /home/tigergraph/tigergraph/log/zk/zookeeper.log
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_metric)gadmin metric
This command reports information about resource consumption on a cluster or select nodes in a cluster, including CPU usage, memory usage, disk space usage, and network usage.
```
$ gadmin metric -h
Show the metric information
Usage:
 gadmin metric [serviceID...] [flags]
Description:
 Show metric information including cpu usage, memory usage, diskspace and network.
 ServiceID should be [serviceName][_partition][#replica], e.g., GSE_1#3. Leave
 replica field empty(e.g. GSE_1) to either refer to all replicas of given
 partition, or if the service has no replicas(e.g. EXE_1). Same for parititons.
 If no serviceIDf is specified for the cpu or memory metric type, it will show all
 service metrics.
 Metric type should be one of the four types:
  cpu         cpu usage
  mem         memory usage
  disk        diskspace usage
  net         network related information
Flags:
 -h, --help      help for metric
 -m, --host strings  choose hosts
 -t, --type string  choose the metric type from [cpu|mem|net|disk] (default "cpu")
 -v, --verbose    report metrics in detail
Global Flags:
   --debug  enable debug log output to stdout
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_reset)gadmin reset
This command resets a particular service. This command is recommended to be used only at the direction of TigerGraph Support, as data loss may occur.
```
$ gadmin reset -h
Reset the whole init or given service with its data
Usage:
 gadmin reset [service name...] [flags]
Description:
 Service name should be a valid TigerGraph service name, for example, GSE, RESTPP
 or GPE.
Flags:
 -y, --confirm  confirm to reset service
 -h, --help   help for reset
Global Flags:
   --debug  enable debug log output to stdout
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_restart)gadmin restart
The `gadmin restart` command is used to restart one, many, or all TigerGraph services. You will need to confirm the restarting of services by either entering y (yes) or n (no). To bypass this prompt, you can use the -y flag to force confirmation.
```
$ gadmin restart -h
Restart services by service id
Usage:
 gadmin restart [serviceID...] [flags]
Description:
 ServiceID should be [serviceName][_partition][#replica], e.g., GSE_1#3. Leave
 replica field empty(e.g. GSE_1) to either refer to all replicas of given
 partition, or if the service has no replicas(e.g. EXE_1). Same for parititons.
Flags:
Flags:
   --auto-restart  auto restart the service on crash
 -y, --confirm    confirm to restart service
 -h, --help      help for restart
   --no-dep     restart service without dependency
   --timeout int  request timeout(in MilliSecond) to restart the service
   --wait-online  wait until the services go online, the time limit can be specified by '--timeout'
Global Flags:
   --debug  enable debug log output to stdout
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

```
$ gadmin restart all -y
[  Info] Stopping ZK ETCD DICT KAFKA ADMIN GSE NGINX GPE RESTPP KAFKASTRM-LL KAFKACONN TS3SERV GSQL TS3 IFM GUI
[  Info] Stopping CTRL
[  Info] Stopping EXE
[  Info] Starting EXE
[  Info] Starting CTRL
[  Info] Starting ZK ETCD DICT KAFKA ADMIN GSE NGINX GPE RESTPP KAFKASTRM-LL KAFKACONN TS3SERV GSQL TS3 IFM GUI
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_start)gadmin start
The `gadmin start` command can be used to start one, many, or all services.
```
$ gadmin start -h
Start services by service id
Usage:
 gadmin start [serviceID...] [flags]
Description:
 ServiceID should be [serviceName][_partition][#replica], e.g., GSE_1#3. Leave
 replica field empty(e.g. GSE_1) to either refer to all replicas of given
 partition, or if the service has no replicas(e.g. EXE_1). Same for parititons.
 If no serviceID is specified, it only starts services excluding the
 infrastructure. Use 'gadmin start all' to start all services.
Flags:
   --auto-restart     auto restart the service on crash
   --dry-run       dry run and output command to start the service
 -h, --help         help for start
   --ignore-error     ignore errors when starting services
   --no-dep        start service without dependency
   --timeout int     request timeout(in MilliSecond) to start the service
   --wait-online     wait until the services go online, the time limit can be specified by '--timeout'
   --with-config string  start with given config file and dump it to each node (only for executor)
   --local        start only local services in cluster instance
Global Flags:
   --debug  enable debug log output to stdout
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

```
$ gadmin start all
[  Info] Starting EXE
[  Info] Starting CTRL
[  Info] Starting ZK ETCD DICT KAFKA ADMIN GSE NGINX GPE RESTPP KAFKASTRM-LL KAFKACONN TS3SERV GSQL TS3 IFM GUI
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_status)gadmin status
Check the status of TigerGraph component servers:
```
$ gadmin status -h
Show current status of service
Usage:
 gadmin status [serviceID...] [flags]
Description:
 ServiceID should be [serviceName][_partition][#replica], e.g., GSE_1#3. Leave
 replica field empty(e.g. GSE_1) to either refer to all replicas of given
 partition, or if the service has no replicas(e.g. EXE_1). Same for parititons.
 If no serviceID is specified, it will show all service status
Flags:
 -h, --help   help for status
 -v, --verbose  report service status in detail
Global Flags:
   --debug  enable debug log output to stdout
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

Use **`gadmin status`**to report whether each of the main component servers is running (up) or stopped (off). The example below shows the normal status when the graph store is empty and a graph schema has not been defined:
```
$ gadmin status
+--------------------+-------------------------+-------------------------+
|  Service Name  |   Service Status   |   Process State   |
+--------------------+-------------------------+-------------------------+
|    ADMIN    |     Online     |     Running     |
|    CTRL    |     Online     |     Running     |
|    DICT    |     Online     |     Running     |
|    ETCD    |     Online     |     Running     |
|    GPE     |     Online     |     Running     |
|    GSE     |     Online     |     Running     |
|    GSQL    |     Online     |     Running     |
|    GUI     |     Online     |     Running     |
|    IFM     |     Online     |     Running     |
|    KAFKA    |     Online     |     Running     |
|   KAFKACONN   |     Online     |     Running     |
|  KAFKASTRM-LL  |     Online     |     Running     |
|    NGINX    |     Online     |     Running     |
|    RESTPP    |     Online     |     Running     |
|    TS3     |     Online     |     Running     |
|   TS3SERV    |     Online     |     Running     |
|     ZK     |     Online     |     Running     |
+--------------------+-------------------------+-------------------------+
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

You can also check the status of each instance using the verbose flag : `gadmin status -v` or `gadmin status --verbose`. This will show each machine’s status. See example below
```
$ gadmin status -v GPE
+--------------------+-------------------------+-------------------------+
|  Service Name  |   Service Status   |   Process State   |
+--------------------+-------------------------+-------------------------+
|   GPE_1#1    |     Warmup     |     Running     |
|   GPE_1#2    |     Warmup     |     Running     |
+--------------------+-------------------------+-------------------------+
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

Here are the most common service and process status states you might see from running the `gadmin status` command :
#### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_service_status_definitions)Service Status Definitions
  * **Online** - The service is online and ready.
  * **Warmup** - The service is processing the graph information and will be online soon.
  * **Stopping** - The service has received a stop command and will be down soon.
  * **Offline** - The service is not available.
  * **Down** - The service has been stopped or crashed.
  * **StatusUnknown** - The valid status of the service is not tracked.


#### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_process_state_status_definitions)Process State Status Definitions
  * **Init** - Process is initializing and will be in the running state soon.
  * **Running** - The process is running and available.
  * **Zombie** - There is a leftover process from a previous instance.
  * **Stopped** - The process has been stopped or crashed.
  * **StatusUnknown** - The valid status of the process is not tracked.


### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_stop)gadmin stop
The `gadmin stop` command can be used to stop one, many, or all TigerGraph services. You will need to confirm the restarting of services by either entering y (yes) or n (no). To bypass this prompt, you can use the -y flag to force confirmation.
```
$ gadmin stop -h
Stop services by service id
Usage:
 gadmin stop [serviceID...] [flags]
Description:
 ServiceID should be [serviceName][_partition][#replica], e.g., GSE_1#3. Leave
 replica field empty(e.g. GSE_1) to either refer to all replicas of given
 partition, or if the service has no replicas(e.g. EXE_1). Same for parititons.
 If no serviceID is specified, it only stops services excluding the
 infrastructure. Use 'gadmin stop all' to stop all services.
Flags:
 -y, --confirm    confirm to stop service
 -h, --help      help for stop
   --ignore-error  ignore errors when stoping services
   --timeout int  request timeout(in MilliSecond) to stop the service
   --local     stop only local services in cluster instance
Global Flags:
   --debug  enable debug log output to stdout
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.10/system-management/management-commands#_gadmin_version)gadmin version
```
$ gadmin version -h
Show the version information
Usage:
 gadmin version [flags]
Description:
 Show version information of all TigerGraph components, including repo name,
 version, git commit number, git commit datetime.
Flags:
 -h, --help  help for version
Global Flags:
   --debug  enable debug log output to stdout
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


